classDiagram
    class AuditingEntity {
        <<abstract>>
        + createdDate DateTime
        + lastModifiedDate DateTime
    }

    class User {
        + id String
        + email String
        + password String
        + fullName String
        + phone String
        + address String
        + avatar String
        + role String
        + isLocked Boolean
        + points Integer
    }

    class PasswordReset {
        + id String
        + token String
        + expiresAt DateTime
    }

    class WasteType {
        + id String
        + name String
        + description String
        + pointsPerKg Double
        + isActive Boolean
    }

    class CollectionRequest {
        + id String
        + quantity Double
        + estimatedQuantity Double
        + address String
        + note String
        + imageUrl String
        + status String
        + verifiedWeight Double
        + verifiedTypeId String
        + pointsEarned Integer
        + completedAt DateTime
    }

    class StatusHistory {
        + id String
        + status String
        + note String
    }

    class Reward {
        + id String
        + name String
        + description String
        + pointsCost Integer
        + quantity Integer
        + imageUrl String
        + isActive Boolean
    }

    class RewardRedemption {
        + id String
        + pointsSpent Integer
        + status String
    }

    class PointTransaction {
        + id String
        + amount Integer
        + type String
        + description String
        + referenceId String
    }

    AuditingEntity <|-- User
    AuditingEntity <|-- PasswordReset
    AuditingEntity <|-- WasteType
    AuditingEntity <|-- CollectionRequest
    AuditingEntity <|-- StatusHistory
    AuditingEntity <|-- Reward
    AuditingEntity <|-- RewardRedemption
    AuditingEntity <|-- PointTransaction

    User "1" --> "0..n" PasswordReset
    User "1" --> "0..n" CollectionRequest
    User "1" --> "0..n" RewardRedemption
    User "1" --> "0..n" PointTransaction

    WasteType "1" --> "0..n" CollectionRequest

    CollectionRequest "1" --> "0..n" StatusHistory

    Reward "1" --> "0..n" RewardRedemption
